# AshleyDeg-Parallel-computing-labs

./: README.md
CUDA/Filters/: Problem_2.ipynb  README.md
CUDA/PI approximation/: Problem_1.ipynb  README.md
MPI/Filters/: CMakeLists.txt  README.md  main.cpp
MPI/Guass-Seidel/: CMakeLists.txt  README.md  main.cpp
OpenMP/: README.md
OpenMP/Filters/: CMakeLists.txt  README.md  main.cpp
OpenMP/Guass-Seidel/: CMakeLists.txt  README.md  main.cpp
